<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/xcrount_white_10"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/tips"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/insert_recharge_account"
        android:textColor="@color/text_color"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/account_edit"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:hint="@string/insert_recharge_tip"
        android:textColor="@color/text_color"
        android:textSize="12sp" />

    <View
        android:layout_width="300dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightgray" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/cancel_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@drawable/recharge_account_text_sel"
            android:textSize="16sp" />
        
        <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/lightgray" />
        
        <TextView
            android:id="@+id/sure_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@drawable/recharge_account_text_sel"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>