<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/edit_bg" >

    <include layout="@layout/top_menu_style"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_layout"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:gravity="center_vertical"
            android:text="@string/suggestion_tips"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/feedback_edit"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:ellipsize="end"
            android:gravity="top"
            android:hint="@string/suggestion_hint"
            android:maxLines="8"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/text_color"
            android:textSize="14sp" >
        </EditText>


        <Button
            android:id="@+id/ok_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/dialog_btn2_selecter"
            android:text="@string/commint"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>