<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/edit_bg"
    android:orientation="vertical"
    android:layout_height="match_parent">

 <include layout="@layout/top_menu_style"/>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/operation_1"
            android:textColor="@color/text_color"
            android:textSize="@dimen/my_item_text_size2" >
        </TextView>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/my_item_next" >
        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/line2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/operation_2"
            android:textColor="@color/text_color"
            android:textSize="@dimen/my_item_text_size2" >
        </TextView>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/my_item_next" >
        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line3"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/operation_3"
            android:textColor="@color/text_color"
            android:textSize="@dimen/my_item_text_size2" >
        </TextView>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/my_item_next" >
        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/line4"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/operation_4"
            android:textColor="@color/text_color"
            android:textSize="@dimen/my_item_text_size2" >
        </TextView>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/my_item_next" >
        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/line5"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/operation_5"
            android:textColor="@color/text_color"
            android:textSize="@dimen/my_item_text_size2" >
        </TextView>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/my_item_next" >
        </ImageView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/line6"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/operation_6"
            android:textColor="@color/text_color"
            android:textSize="@dimen/my_item_text_size2" >
        </TextView>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/my_item_next" >
        </ImageView>
    </RelativeLayout>
</LinearLayout>  
