<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <include layout="@layout/top_menu_style"/>
    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_layout"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/repair_tips"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/repair_reason_radiagroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <RadioButton
                android:id="@+id/repair_reason1"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_weight="1.0"
                android:background="@drawable/radio_btn_selecter2"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/repair_reason1"
                android:textColor="@drawable/radio_text_selecter"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/repair_reason2"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1.0"
                android:background="@drawable/radio_btn_selecter2"
                android:button="@null"
                android:gravity="center"
                android:text="@string/repair_reason2"
                android:textColor="@drawable/radio_text_selecter"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/repair_reason3"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_weight="1.0"
                android:background="@drawable/radio_btn_selecter2"
                android:button="@null"
                android:gravity="center"
                android:text="@string/repair_reason3"
                android:textColor="@drawable/radio_text_selecter"
                android:textSize="15sp" />
        </RadioGroup>
  </LinearLayout>
    <RelativeLayout
        android:id="@+id/repair_device_chose"
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设备"
            android:textColor="@color/text_color"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/repair_chose1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="请选择"
            android:layout_centerVertical="true"
            android:layout_marginRight="22dp"
            android:layout_alignParentRight="true" />
        <ImageView
            android:id="@+id/repair_chose1_img"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/pull_down"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/edit_bg"/>
    <RelativeLayout
        android:id="@+id/repair_style_chose"
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="故障现象"
            android:textColor="@color/text_color"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/repair_chose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="请选择"
             android:layout_alignParentRight="true"
            android:layout_marginRight="22dp"
            android:layout_centerVertical="true" />
        <ImageView
            android:id="@+id/repair_chose2_img"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/pull_down"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/edit_bg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_number"
            android:textColor="@color/text_color"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/room_number_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textSize="16sp"></EditText>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/edit_bg"/>
    <EditText
        android:id="@+id/repair_edit"
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/guzhang_edit_style"
        android:ellipsize="end"
        android:gravity="top"
        android:hint="@string/repair_hint"
        android:maxLines="4"
        android:textColor="@color/text_color"
        android:textSize="15sp" >
    </EditText>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/dialog_btn2_selecter"
        android:text="@string/commint"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>