<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

<include layout="@layout/top_menu_style"/>
    <RelativeLayout
        android:id="@+id/scan_device_qrcode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/edit_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/scan_device_qrcode"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15sp"
            android:src="@drawable/my_item_next" />
    </RelativeLayout>

    <TextView
        android:id="@+id/admin_prjname_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/bluetooth_state_disconnect"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:id="@+id/bluetooth_disconnect_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/bluetooth_disconnect" />

            <TextView
                android:id="@+id/bluetooth_state_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_state_disconnect"
                android:textColor="@color/base_color"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/device_register_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/bind_device" />

            <TextView
                android:id="@+id/device_register_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/device_register"
                android:textColor="@color/base_color"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>